log
Wed, Mar 19, 2025  8:46:11 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:05:48 AM: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:46:10: error: unused variable 'elemento' [-Werror=unused-variable]
    void* elemento = first(L);
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6a56891
Wed, Mar 19, 2025  9:11:12 AM: 
 exercises.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:9: error: 'num' undeclared (first use in this function)
       *(num) = k;
         ^~~
exercises.c:50:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
28868e1
Wed, Mar 19, 2025  9:12:29 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
b2802c2
Wed, Mar 19, 2025  9:20:54 AM: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:17: error: implicit declaration of function 'gest_size' [-Werror=implicit-function-declaration]
    int tamano = gest_size(L);
                 ^~~~~~~~~
exercises.c:68:7: error: statement with no effect [-Werror=unused-value]
       suma
       ^~~~
exercises.c:69:4: error: expected ';' before '}' token
    }
    ^
cc1.exe: all warnings being treated as errors
Compilation failed
d5e3f35
Wed, Mar 19, 2025  9:22:23 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:68:7: error: invalid use of undefined type 'struct List'
       suma += (*L[k]);
       ^~~~
exercises.c:68:18: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       suma += (*L[k]);
                  ^
Compilation failed
0f81b96
Wed, Mar 19, 2025  9:25:48 AM: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:65:19: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int elemento = first(L);
                   ^~~~~
exercises.c:69:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       elemento = next(L);
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
b72acc6
Wed, Mar 19, 2025  9:31:22 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
3bb66a4
Wed, Mar 19, 2025  9:35:49 AM: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:88:20: error: comparison between pointer and integer [-Werror]
       if (elemento == elem)
                    ^~
exercises.c:90:25: error: passing argument 2 of 'pushCurrent' makes pointer from integer without a cast [-Werror=int-conversion]
          pushCurrent(L, elem);
                         ^~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:23:6: note: expected 'void *' but argument is of type 'int'
 void pushCurrent(List *L, void *dato);
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
64f0218
Wed, Mar 19, 2025  9:36:47 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:88:20: error: comparison between pointer and integer [-Werror]
       if (elemento == elem)
                    ^~
exercises.c:90:10: error: dereferencing 'void *' pointer [-Werror]
          *popCurrent(L);
          ^~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
dcf4c6b
Wed, Mar 19, 2025  9:37:34 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:90:10: error: dereferencing 'void *' pointer [-Werror]
          *popCurrent(L);
          ^~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4a3e61c
Wed, Mar 19, 2025  9:37:55 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
81bf563
